<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meggnify</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_password">Password</string>
    <string name="user_email">Email Address</string>
    <string name="meggnet_login">NRIC/FIN</string>
    <string name="meggnet_password">Password</string>
    <string name="meggnet_password_confirmation">Password Confirmation</string>
    <string name="register_disclaimer">Disclaimer</string>
    <string name="meggnet_identification_number">NRIC/FIN</string>
    <string name="meggnet_email">Email Address</string>
    <string name="title_activity_welcome">Meggnify</string>
    <string name="welcome_meggnify">welcome to the meggnify</string>
    <string name="home_page">Home</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="email_address">Email Address</string>
    <string name="nric">NRIC/FIN</string>
    <string name="password">Password</string>

</resources>