<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/yellow"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" >
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/email_address" />

        <EditText
            android:id="@+id/meggnetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/meggnet_email"
            android:inputType="textEmailAddress" >

            <requestFocus android:layout_width="wrap_content" />
        </EditText>
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/nric" />

        <EditText
            android:id="@+id/meggnetIdentificationNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/meggnet_identification_number"
            android:inputType="text" />
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/password" />

        <EditText
            android:id="@+id/meggnetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/meggnet_password"
            android:inputType="textPassword" />
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/password_confirmation" />

        <EditText
            android:id="@+id/meggnetPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/meggnet_password_confirmation"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="registerNewAccount"
            android:text="@string/register" />
    </LinearLayout>

</ScrollView>